@@ -41,6 +41,12 @@ NSE.default <- function (sim, obs, na.rm=TRUE, ...){
 
 
 NSE.matrix <- function (sim, obs, na.rm=TRUE, ...){ 
+
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
  
   NS <- rep(NA, ncol(obs))       
           
