@@ -72,6 +72,12 @@ cp.default <- function (sim, obs, na.rm=TRUE, ...){
 
 cp.matrix <- function (sim, obs, na.rm=TRUE, ...){ 
 
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
   cp <- rep(NA, ncol(obs))       
           
   cp <- sapply(1:ncol(obs), function(i,x,y) { 
