@@ -53,6 +53,12 @@ d.default <- function (sim, obs, na.rm=TRUE, ...){
 
 
 d.matrix <- function (sim, obs, na.rm=TRUE, ...){ 
+ 
+ # Checking that 'sim' and 'obs' have the same dimensions
+ if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
 
  d <- rep(NA, ncol(obs))       
           
