@@ -63,6 +63,12 @@ rd.default <- function (sim, obs, na.rm=TRUE, ...){
 
 rd.matrix <- function (sim, obs, na.rm=TRUE, ...){ 
 
+ # Checking that 'sim' and 'obs' have the same dimensions
+ if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
  rd <- rep(NA, ncol(obs))       
           
  rd <- sapply(1:ncol(obs), function(i,x,y) { 
